--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,9 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
+
+
+
 #header {
   background: #fff;
   transition: all 0.5s;
@@ -596,6 +599,541 @@ section {
   background-color: #ebf1fa;
   transition: .5s;
 }
+
+/*   left bar style */
+element.style {
+}
+.relative {
+    position: relative;
+}
+.relative {
+    position: relative;
+}
+.relative {
+    position: relative;
+}
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+user agent stylesheet
+div {
+    display: block;
+}
+body, html {
+    font-family: myriad-pro, Arial;
+    font-size: 18px;
+    font-weight: 300;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+}
+body, html {
+    font-family: myriad-pro, Arial;
+    font-size: 18px;
+    font-weight: 300;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+}
+body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
+}
+html {
+    font-size: 10px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+html {
+    font-family: sans-serif;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
+element.style {
+}
+.sticky-left-nav {
+    position: fixed;
+    width: 120px;
+    display: block;
+    background-color: transparent;
+    z-index: 1;
+}
+.top-menu {
+    top: 20%;
+}
+.sticky-left-nav {
+    position: fixed;
+    width: 120px;
+    display: block;
+    background-color: transparent;
+    z-index: 1;
+}
+.top-menu {
+    top: 20%;
+}
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+    display: block;
+}
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+user agent stylesheet
+nav {
+    display: block;
+}
+body, html {
+    font-family: myriad-pro, Arial;
+    font-size: 18px;
+    font-weight: 300;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+}
+body, html {
+    font-family: myriad-pro, Arial;
+    font-size: 18px;
+    font-weight: 300;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+}
+body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
+}
+html {
+    font-size: 10px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+html {
+    font-family: sans-serif;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
+element.style {
+}
+.stick-left-nav-ul {
+    padding-left: 20px;
+    width: 95px;
+}
+.stick-left-nav-ul {
+    padding-left: 20px;
+    width: 95px;
+}
+ol, ul {
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+user agent stylesheet
+ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+body, html {
+    font-family: myriad-pro, Arial;
+    font-size: 18px;
+    font-weight: 300;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+}
+body, html {
+    font-family: myriad-pro, Arial;
+    font-size: 18px;
+    font-weight: 300;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+}
+body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
+}
+html {
+    font-size: 10px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+html {
+    font-family: sans-serif;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+element.style {
+}
+.sticky-left-nav ul li {
+    list-style: none;
+    height: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+.sticky-left-nav ul li {
+    list-style: none;
+    height: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+.mb50 {
+    margin-bottom: 50px !important;
+}
+.mb50 {
+    margin-bottom: 50px !important;
+}
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+user agent stylesheet
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+user agent stylesheet
+ul {
+    list-style-type: disc;
+}
+body, html {
+    font-family: myriad-pro, Arial;
+    font-size: 18px;
+    font-weight: 300;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+}
+body, html {
+    font-family: myriad-pro, Arial;
+    font-size: 18px;
+    font-weight: 300;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+}
+body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
+}
+html {
+    font-size: 10px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+html {
+    font-family: sans-serif;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
+element.style {
+}
+.sticky-left-nav ul li a, .sticky-left-nav ul li a:hover, .sticky-left-nav ul li a:focus {
+    text-decoration: none;
+}
+.sticky-left-nav ul li a, .sticky-left-nav ul li a:hover, .sticky-left-nav ul li a:focus {
+    text-decoration: none;
+}
+a {
+    color: #007cc3;
+    font-weight: 400;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    outline: 0;
+}
+a {
+    color: #007cc3;
+    font-weight: 400;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    outline: 0;
+}
+a {
+    color: #337ab7;
+    text-decoration: none;
+}
+a {
+    background-color: transparent;
+}
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+user agent stylesheet
+a:-webkit-any-link {
+    color: -webkit-link;
+    cursor: pointer;
+    text-decoration: underline;
+}
+.sticky-left-nav ul li {
+    list-style: none;
+    height: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+.sticky-left-nav ul li {
+    list-style: none;
+    height: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+user agent stylesheet
+li {
+    text-align: -webkit-match-parent;
+}
+user agent stylesheet
+ul {
+    list-style-type: disc;
+}
+body, html {
+    font-family: myriad-pro, Arial;
+    font-size: 18px;
+    font-weight: 300;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+}
+body, html {
+    font-family: myriad-pro, Arial;
+    font-size: 18px;
+    font-weight: 300;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+}
+body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
+}
+html {
+    font-size: 10px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+html {
+    font-family: sans-serif;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+}
+.sticky-left-nav ul li.nav-active a::before, .side-menu .sticky-left-nav ul li.nav-active-menu a::before {
+    width: 60px;
+    height: 4px;
+    opacity: 1;
+}
+.sticky-left-nav ul li.nav-active a::before, .side-menu .sticky-left-nav ul li.nav-active-menu a::before {
+    width: 60px;
+    height: 4px;
+    opacity: 1;
+}
+.sticky-left-nav ul li a::before, .side-menu .sticky-left-nav ul li.nav-active-menu a::before {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 1px;
+    opacity: 1;
+    background-color: #fff;
+    transition: all 0.3s ease-in-out;
+}
+.sticky-left-nav ul li a::before, .side-menu .sticky-left-nav ul li.nav-active-menu a::before {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 1px;
+    opacity: 1;
+    background-color: #fff;
+    transition: all 0.3s ease-in-out;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
+-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.sticky-left-nav ul li a, .sticky-left-nav ul li a:hover, .sticky-left-nav ul li a:focus {
+    text-decoration: none;
+}
+.sticky-left-nav ul li a, .sticky-left-nav ul li a:hover, .sticky-left-nav ul li a:focus {
+    text-decoration: none;
+}
+a {
+    color: #007cc3;
+    font-weight: 400;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    outline: 0;
+}
+a {
+    color: #007cc3;
+    font-weight: 400;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    outline: 0;
+}
+a {
+    color: #337ab7;
+    text-decoration: none;
+}
+user agent stylesheet
+a:-webkit-any-link {
+    color: -webkit-link;
+    cursor: pointer;
+}
+.sticky-left-nav ul li {
+    list-style: none;
+    height: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+.sticky-left-nav ul li {
+    list-style: none;
+    height: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+user agent stylesheet
+li {
+    text-align: -webkit-match-parent;
+}
+user agent stylesheet
+ul {
+    list-style-type: disc;
+}
+body, html {
+    font-family: myriad-pro, Arial;
+    font-size: 18px;
+    font-weight: 300;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+}
+body, html {
+    font-family: myriad-pro, Arial;
+    font-size: 18px;
+    font-weight: 300;
+    color: #000000;
+    padding: 0;
+    margin: 0;
+}
+body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
+}
+html {
+    font-size: 10px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+html {
+    font-family: sans-serif;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
 
 /* Services Section
 --------------------------------*/
